# Excavator_RL

./: README.md
scripts/: list_envs.py  random_agent.py  zero_agent.py
scripts/rsl_rl/: play.py  train.py
source/excavator_ppo/: setup.py
source/excavator_ppo/config/: extension.toml
source/excavator_ppo/excavator_ppo/: ui_extension_example.py
source/excavator_ppo/excavator_ppo/robots/: .asset_hash  URDF.urdf  excavator.py
source/excavator_ppo/excavator_ppo/robots/URDF/config/: joint_names_URDF.yaml
source/excavator_ppo/excavator_ppo/robots/URDF/meshes/: base_link.STL  boom_pitch_link.STL  bucket_pitch_link.STL  forearm_pitch_link.STL  left_wheel_link.STL  right_wheel_link.STL
source/excavator_ppo/excavator_ppo/robots/URDF/urdf/: URDF.csv
source/excavator_ppo/excavator_ppo/robots/excavator_JCB/: CMakeLists.txt  package.xml
source/excavator_ppo/excavator_ppo/robots/excavator_six_wheels/: CMakeLists.txt  package.xml
source/excavator_ppo/excavator_ppo/robots/excavator_six_wheels/config/: joint_names_excavator_six_wheels.yaml
source/excavator_ppo/excavator_ppo/robots/excavator_six_wheels/launch/: display.launch  gazebo.launch
source/excavator_ppo/excavator_ppo/robots/excavator_six_wheels/meshes/: base_link.STL  boom_pitch_link.STL  bucket_pitch_link.STL  forearm_pitch_link.STL  left_behind_wheel_link.STL  left_wheel_link.STL  right_behind_wheel_link.STL  right_front_wheel_link.STL  right_wheel_link.STL
source/excavator_ppo/excavator_ppo/robots/excavator_six_wheels/urdf/: excavator_six_wheels.csv  excavator_six_wheels.urdf
(+12 files in other folders)
